Adding the parameters of the production function

--- a/python_testing.ipynb
+++ b/python_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,10 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#! Fix scope name shadowing \n",
     "parameters = np.zeros(6)            # Empty array to hold the parameters of the prodcution function \n",
     "parameters[0] = 7.044873503263437   # Mean of the sinusoidal production \n",
     "parameters[1] = 0.18                # Amplitude of the sinusoidal production \n",
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def production(t):    \n",
+    "def production(t, parameters):    \n",
     "    \"\"\"\n",
     "    The production function defined as the sum of sinusoidal and super-gaussian terms \n",
     "    \"\"\"\n",
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,15 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dydx(y, t):\n",
+    "#! Need to improve the doc strings here\n",
+    "def dydx(y, t, p):\n",
     "    \"\"\"\n",
     "    The gradient of the carbon box model.\n",
     "    \"\"\"\n",
-    "    return cbm._matrix @ y + production(t) * projection"
+    "    return cbm._matrix @ y + production(t, p) * projection"
    ]
   },
   {
@@ -108,22 +110,21 @@
    "source": [
     "This is going very very well. I need to go plumbing again though. this means that I can look through the depths of the ode implementation and destroy the extra return improving my ability to do things\n",
     "\n",
-    "So I want to only use jax numpy and transition to using lax. Next priority though is to write the loss function and to differentiate it. I also need a bin function \n",
+    "So I want to only use jax numpy and transition to using lax. Next priority though is to write the loss function and to differentiate it. \n",
     "\n",
-    "I need to explain the cheet codes that I am using to simplify the process for the profiling \n",
-    "\n",
-    "I need to generate a visual since the is an insane chi squared."
+    "I need to explain the cheet codes that I am using to simplify the process for the profiling by only returning one value every year and ignoring the binning. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#! Doc strings\n",
     "def loss_function(odeint, args):\n",
     "    simulation = odeint(*args)[:, 2][0:28]  # Running the simulation \n",
-    "    simulation = (simulation - u0[2]) / u0[2] # Deviations from initial \n",
+    "    simulation = 1000 * (simulation - u0[2]) / u0[2] # Deviations from initial \n",
     "\n",
     "    miyake = pd.read_csv(\"Miyake12.csv\", sep=\" \")   # Importing the miyake data\n",
     "    simulation += np.mean(miyake.d14c[1:4])         # Adding the offset \n",
@@ -132,27 +133,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-7413665.688287802"
+       "-255.39072619723603"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "loss_function(ode.odeint, [dydx, u0, np.arange(760.0, 790.0)])"
+    "loss_function(ode.odeint, [dydx, u0, np.arange(760.0, 790.0), parameters])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,6 +164,7 @@
     "    \"time variance\" : []       # The variance of the run time of 10 trials\n",
     "}\n",
     "\n",
+    "#! need to write a doc string\n",
     "def profile(func, args=[]) -> tuple:\n",
     "    time_sample = np.zeros(10)  # Storing the trials\n",
     "    \n",
@@ -177,20 +179,19 @@
     "\n",
     "for namespace in namespaces:# Iterating through the namespaces of odeint function \n",
     "    mean, variance = profile(\n",
-    "        namespace.odeint, [dydx, u0, np.arange(760.0, 790.0)])   # Profiling the speed\n",
+    "        namespace.odeint, [dydx, u0, np.arange(760.0, 790.0), parameters])   # Profiling the speed\n",
     "\n",
     "    results[\"function\"].append(\"odeint\")            # The function that was profiled \n",
     "    results[\"solver\"].append(namespaces[namespace]) # Stroing implementation \n",
     "    results[\"time\"].append(mean)                    # Storing the mean run time \n",
     "    results[\"time variance\"].append(variance)       # Storing the variance of the mean\n",
     "\n",
-    "    mean, variance = profile()\n",
-    "    \n"
+    "    # mean, variance = profile()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -225,15 +226,15 @@
        "      <th>0</th>\n",
        "      <td>ode</td>\n",
        "      <td>odeint</td>\n",
-       "      <td>0.001167</td>\n",
-       "      <td>1.671979e-07</td>\n",
+       "      <td>0.000785</td>\n",
+       "      <td>2.844828e-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>jax</td>\n",
        "      <td>odeint</td>\n",
-       "      <td>0.000735</td>\n",
-       "      <td>3.983242e-08</td>\n",
+       "      <td>0.107312</td>\n",
+       "      <td>1.030730e-01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -241,11 +242,11 @@
       ],
       "text/plain": [
        "  solver function      time  time variance\n",
-       "0    ode   odeint  0.001167   1.671979e-07\n",
-       "1    jax   odeint  0.000735   3.983242e-08"
+       "0    ode   odeint  0.000785   2.844828e-07\n",
+       "1    jax   odeint  0.107312   1.030730e-01"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
