Prototype multi-profile loop

--- a/python_testing.ipynb
+++ b/python_testing.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ticktack                 # For the compilation of the model\n",
     "import ode                      # As a method of solving the odes\n",
     "\n",
-    "from jax import jacfwd          # Forward mode the autodiff\n",
+    "from jax import jacfwd, jacrev  # Forward and reverse mode the autodiff\n",
     "from jax import numpy as np     # annoying shit that I wish I didn't hav to deal with \n",
+    "import jax\n",
     "import jax.experimental.ode as jax_ode    # Jax odeint \n",
     "\n",
     "import pandas as pd             # Becuase I want to \n",
@@ -147,32 +148,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 228,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DeviceArray([166.42147377, -20.67288299, 800.82423766, -20.2934776 ,\n",
-       "               1.02592937, -10.26710649], dtype=float64)"
-      ]
-     },
-     "execution_count": 177,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "loss = lambda p: loss_function(ode.odeint, [dydx, u0, np.arange(760.0, 790.0), p])\n",
-    "\n",
-    "jacfwd(loss)(parameters)\n",
+    "def profile(func, args=[]) -> tuple:\n",
+    "    \"\"\"\n",
+    "    Profiles the function, func, with the arguments, args, returning the speed and the variance of the speed.\n",
+    "    \"\"\"\n",
+    "    time_sample = np.zeros(10)  # Storing the trials\n",
     "    \n",
-    "    "
+    "    for i in range(10):\n",
+    "        timer = process_time()                          # starting a timer \n",
+    "        func(*args).block_until_ready()                                     # Running the model \n",
+    "        time_sample = time_sample.at[i].set(process_time() - timer)   # Stopping the timer and storing \n",
+    "\n",
+    "    return np.mean(time_sample), np.var(time_sample)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#! Doc String and general nicness\n",
+    "def add_row(method, solver, mean, variance):\n",
+    "    results[\"function\"].append(method)\n",
+    "    results[\"solver\"].append(solver)\n",
+    "    results[\"time\"].append(mean)\n",
+    "    results[\"time variance\"].append(variance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,36 +193,36 @@
     "    \"time variance\" : []       # The variance of the run time of 10 trials\n",
     "}\n",
     "\n",
-    "def profile(func, args=[]) -> tuple:\n",
-    "    \"\"\"\n",
-    "    Profiles the function, func, with the arguments, args, returning the speed and the variance of the speed.\n",
-    "    \"\"\"\n",
-    "    time_sample = np.zeros(10)  # Storing the trials\n",
-    "    \n",
-    "    for i in range(10):\n",
-    "        timer = process_time()                  # starting a timer \n",
-    "        func(*args)                             # Running the model \n",
-    "        time_sample[i] = process_time() - timer # Stopping the timer and storing \n",
     "\n",
-    "    return np.mean(time_sample), np.var(time_sample)\n",
+    "namespaces = {ode : \"ode\", jax_ode : \"jax\"} # For translation from string to module \n",
+    "loss = lambda p: loss_function(ode.odeint, [dydx, u0, np.arange(760.0, 790.0), p])\n",
+    "# This is not permitting flexibility of the odeint\n",
     "\n",
-    "namespaces = {ode : \"ode\", jax : \"jax\"} # For translation from string to module \n",
+    "#! Genuinely naming needs to be fixed\n",
+    "gradient = lambda p: jacfwd(loss)(parameters)         # Calculating the gradient \n",
+    "hessians = lambda p: jacfwd(jacfwd(loss))(parameters) # Calculating the hessian   \n",
     "\n",
     "for namespace in namespaces:# Iterating through the namespaces of odeint function \n",
     "    mean, variance = profile(\n",
-    "        namespace.odeint, [dydx, u0, np.arange(760.0, 790.0), parameters])   # Profiling the speed\n",
+    "        namespace.odeint, \n",
+    "        [dydx, u0, np.arange(760.0, 790.0), parameters]\n",
+    "    )   # Profiling the speed\n",
     "\n",
-    "    results[\"function\"].append(\"odeint\")            # The function that was profiled \n",
-    "    results[\"solver\"].append(namespaces[namespace]) # Stroing implementation \n",
-    "    results[\"time\"].append(mean)                    # Storing the mean run time \n",
-    "    results[\"time variance\"].append(variance)       # Storing the variance of the mean\n",
+    "    # results[\"function\"].append(\"odeint\")            # The function that was profiled \n",
+    "    # results[\"solver\"].append(namespaces[namespace]) # Stroing implementation \n",
+    "    # results[\"time\"].append(mean)                    # Storing the mean run time \n",
+    "    # results[\"time variance\"].append(variance)       # Storing the variance of the mean\n",
     "\n",
-    "    # mean, variance = profile()"
+    "    #? Do I want to define a create row function for this repeated logic?\n",
+    "    mean, variance = profile(gradient, [parameters])\n",
+    "    add_row(\"gradient\", namespaces[namespace], mean, variance)\n",
+    "\n",
+    "    mean, variance = profile(hessians, [parameters])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -246,28 +256,28 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ode</td>\n",
-       "      <td>odeint</td>\n",
-       "      <td>0.000785</td>\n",
-       "      <td>2.844828e-07</td>\n",
+       "      <td>gradient</td>\n",
+       "      <td>0.026267586999996696</td>\n",
+       "      <td>2.4146845311620305e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>jax</td>\n",
-       "      <td>odeint</td>\n",
-       "      <td>0.107312</td>\n",
-       "      <td>1.030730e-01</td>\n",
+       "      <td>gradient</td>\n",
+       "      <td>0.018713640199997883</td>\n",
+       "      <td>4.2575079626529305e-06</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  solver function      time  time variance\n",
-       "0    ode   odeint  0.000785   2.844828e-07\n",
-       "1    jax   odeint  0.107312   1.030730e-01"
+       "  solver  function                  time           time variance\n",
+       "0    ode  gradient  0.026267586999996696  2.4146845311620305e-05\n",
+       "1    jax  gradient  0.018713640199997883  4.2575079626529305e-06"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,32 +285,6 @@
    "source": [
     "results = pd.DataFrame(results) # Switching to a pandas data frame\n",
     "results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(DeviceArray(1.2246468e-16, dtype=float64, weak_type=True),\n",
-       " DeviceArray(-1., dtype=float64, weak_type=True))"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from jax import jvp, grad\n",
-    "import jax.numpy as np\n",
-    "\n",
-    "jvp(np.sin, (np.pi,), (1.0,))\n",
-    "# cos = grad(np.sin)\n",
-    "# cos(3.14159)"
    ]
   },
   {
