Working pure profiles of the grad and hessians

--- a/python_testing.ipynb
+++ b/python_testing.ipynb
@@ -115,17 +115,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is going very very well. I need to go plumbing again though. this means that I can look through the depths of the ode implementation and destroy the extra return improving my ability to do things\n",
-    "\n",
-    "So I want to only use jax numpy and transition to using lax. Next priority though is to write the loss function and to differentiate it. \n",
-    "\n",
-    "I need to explain the cheet codes that I am using to simplify the process for the profiling by only returning one value every year and ignoring the binning. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 148,
    "metadata": {},
@@ -168,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,12 +166,12 @@
     "    results[\"function\"].append(method)\n",
     "    results[\"solver\"].append(solver)\n",
     "    results[\"time\"].append(mean)\n",
-    "    results[\"time variance\"].append(variance)"
+    "    results[\"time_variance\"].append(variance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,39 +179,46 @@
     "    \"solver\" : [],              # The library containing the solver \n",
     "    \"function\" : [],            # The function that was getting profiled \n",
     "    \"time\" : [],                # The mean run time of 10 trials \n",
-    "    \"time variance\" : []       # The variance of the run time of 10 trials\n",
+    "    \"time_variance\" : []       # The variance of the run time of 10 trials\n",
     "}\n",
     "\n",
-    "\n",
     "namespaces = {ode : \"ode\", jax_ode : \"jax\"} # For translation from string to module \n",
-    "loss = lambda p: loss_function(ode.odeint, [dydx, u0, np.arange(760.0, 790.0), p])\n",
-    "# This is not permitting flexibility of the odeint\n",
-    "\n",
-    "#! Genuinely naming needs to be fixed\n",
-    "gradient = lambda p: jacfwd(loss)(parameters)         # Calculating the gradient \n",
-    "hessians = lambda p: jacfwd(jacfwd(loss))(parameters) # Calculating the hessian   \n",
     "\n",
     "for namespace in namespaces:# Iterating through the namespaces of odeint function \n",
     "    mean, variance = profile(\n",
     "        namespace.odeint, \n",
     "        [dydx, u0, np.arange(760.0, 790.0), parameters]\n",
     "    )   # Profiling the speed\n",
+    "    add_row(\"odeint\", namespaces[namespace], mean, variance)\n",
     "\n",
-    "    # results[\"function\"].append(\"odeint\")            # The function that was profiled \n",
-    "    # results[\"solver\"].append(namespaces[namespace]) # Stroing implementation \n",
-    "    # results[\"time\"].append(mean)                    # Storing the mean run time \n",
-    "    # results[\"time variance\"].append(variance)       # Storing the variance of the mean\n",
+    "    loss = lambda p: loss_function(\n",
+    "        namespace.odeint, \n",
+    "        [dydx, u0, np.arange(760.0, 790.0), p]\n",
+    "    )\n",
     "\n",
-    "    #? Do I want to define a create row function for this repeated logic?\n",
+    "    #* The gradients exist below \n",
+    "    def gradient(p): \n",
+    "        if namespaces[namespace] == \"ode\":\n",
+    "            return jacfwd(loss)(p)         # Calculating the gradient \n",
+    "        else:\n",
+    "            return jacrev(loss)(p)\n",
+    "\n",
     "    mean, variance = profile(gradient, [parameters])\n",
     "    add_row(\"gradient\", namespaces[namespace], mean, variance)\n",
     "\n",
-    "    mean, variance = profile(hessians, [parameters])"
+    "    def hessians(p): \n",
+    "        if namespaces[namespace] == \"ode\":\n",
+    "            return jacfwd(jacfwd(loss))(p) # Calculating the hessian \n",
+    "        else:\n",
+    "            return jacrev(jacrev(loss))(p)\n",
+    "\n",
+    "    mean, variance = profile(hessians, [parameters])\n",
+    "    add_row(\"hessian\", namespaces[namespace], mean, variance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -249,41 +245,76 @@
        "      <th>solver</th>\n",
        "      <th>function</th>\n",
        "      <th>time</th>\n",
-       "      <th>time variance</th>\n",
+       "      <th>time_variance</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ode</td>\n",
-       "      <td>gradient</td>\n",
-       "      <td>0.026267586999996696</td>\n",
-       "      <td>2.4146845311620305e-05</td>\n",
+       "      <td>odeint</td>\n",
+       "      <td>457983.50000296754</td>\n",
+       "      <td>25.413049995671976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>ode</td>\n",
+       "      <td>gradient</td>\n",
+       "      <td>16887354.39999931</td>\n",
+       "      <td>2817.0977363889106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ode</td>\n",
+       "      <td>hessian</td>\n",
+       "      <td>52588760.70000014</td>\n",
+       "      <td>112801.54709862603</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>jax</td>\n",
+       "      <td>odeint</td>\n",
+       "      <td>1627098.2000023085</td>\n",
+       "      <td>346.2926381876793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>jax</td>\n",
        "      <td>gradient</td>\n",
-       "      <td>0.018713640199997883</td>\n",
-       "      <td>4.2575079626529305e-06</td>\n",
+       "      <td>30587562.000002325</td>\n",
+       "      <td>47049.346911655986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>jax</td>\n",
+       "      <td>hessian</td>\n",
+       "      <td>140733717.8000006</td>\n",
+       "      <td>93383.09290825175</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  solver  function                  time           time variance\n",
-       "0    ode  gradient  0.026267586999996696  2.4146845311620305e-05\n",
-       "1    jax  gradient  0.018713640199997883  4.2575079626529305e-06"
+       "  solver  function                time       time_variance\n",
+       "0    ode    odeint  457983.50000296754  25.413049995671976\n",
+       "1    ode  gradient   16887354.39999931  2817.0977363889106\n",
+       "2    ode   hessian   52588760.70000014  112801.54709862603\n",
+       "3    jax    odeint  1627098.2000023085   346.2926381876793\n",
+       "4    jax  gradient  30587562.000002325  47049.346911655986\n",
+       "5    jax   hessian   140733717.8000006   93383.09290825175"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "results = pd.DataFrame(results) # Switching to a pandas data frame\n",
+    "results.time *= 1000            # Moving everything into millisceonds\n",
+    "results.time_variance *= 1000   # Moving into the domain of milliseconds\n",
+    "\n",
     "results"
    ]
   },
