Complete pure implementation

--- a/python_testing.ipynb
+++ b/python_testing.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -253,59 +253,59 @@
        "      <th>0</th>\n",
        "      <td>ode</td>\n",
        "      <td>odeint</td>\n",
-       "      <td>457983.50000296754</td>\n",
-       "      <td>25.413049995671976</td>\n",
+       "      <td>0.4939397999962125</td>\n",
+       "      <td>4.624569205848288e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>ode</td>\n",
        "      <td>gradient</td>\n",
-       "      <td>16887354.39999931</td>\n",
-       "      <td>2817.0977363889106</td>\n",
+       "      <td>14.975688700000946</td>\n",
+       "      <td>0.006216246054648505</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>ode</td>\n",
        "      <td>hessian</td>\n",
-       "      <td>52588760.70000014</td>\n",
-       "      <td>112801.54709862603</td>\n",
+       "      <td>44.8473973999981</td>\n",
+       "      <td>0.05723174769181011</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>jax</td>\n",
        "      <td>odeint</td>\n",
-       "      <td>1627098.2000023085</td>\n",
-       "      <td>346.2926381876793</td>\n",
+       "      <td>1.8445210999985306</td>\n",
+       "      <td>0.0006476376867499766</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>jax</td>\n",
        "      <td>gradient</td>\n",
-       "      <td>30587562.000002325</td>\n",
-       "      <td>47049.346911655986</td>\n",
+       "      <td>23.495781799999808</td>\n",
+       "      <td>0.029020826597351067</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>jax</td>\n",
        "      <td>hessian</td>\n",
-       "      <td>140733717.8000006</td>\n",
-       "      <td>93383.09290825175</td>\n",
+       "      <td>161.67288740000174</td>\n",
+       "      <td>5.256763782648996</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  solver  function                time       time_variance\n",
-       "0    ode    odeint  457983.50000296754  25.413049995671976\n",
-       "1    ode  gradient   16887354.39999931  2817.0977363889106\n",
-       "2    ode   hessian   52588760.70000014  112801.54709862603\n",
-       "3    jax    odeint  1627098.2000023085   346.2926381876793\n",
-       "4    jax  gradient  30587562.000002325  47049.346911655986\n",
-       "5    jax   hessian   140733717.8000006   93383.09290825175"
+       "  solver  function                time          time_variance\n",
+       "0    ode    odeint  0.4939397999962125  4.624569205848288e-05\n",
+       "1    ode  gradient  14.975688700000946   0.006216246054648505\n",
+       "2    ode   hessian    44.8473973999981    0.05723174769181011\n",
+       "3    jax    odeint  1.8445210999985306  0.0006476376867499766\n",
+       "4    jax  gradient  23.495781799999808   0.029020826597351067\n",
+       "5    jax   hessian  161.67288740000174      5.256763782648996"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
