Protyping binned results

--- a/python_testing.ipynb
+++ b/python_testing.ipynb
@@ -187,7 +187,7 @@
     "for namespace in namespaces:# Iterating through the namespaces of odeint function \n",
     "    mean, variance = profile(\n",
     "        namespace.odeint, \n",
-    "        [dydx, u0, np.arange(760.0, 790.0), parameters]\n",
+    "        [dydx, u0, np.arange(760.0, 790.0, 1 / 12), parameters]\n",
     "    )   # Profiling the speed\n",
     "    add_row(\"odeint\", namespaces[namespace], mean, variance)\n",
     "\n",
@@ -316,6 +316,13 @@
     "results.time_variance *= 1000   # Moving into the domain of milliseconds\n",
     "\n",
     "results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So for the binning function I basically create a `linespace` based on some time oversample. I will make this a multiple of 12 for simplicity and then I can capture and average the values over the growth season which I shall choose as the firs 6 months of the year."
    ]
   },
   {
